# Citrus

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  Cargo.toml  Sphere.cc  Sphere.h  camera.cc  camera.h  main.cpp  material.cc  material.h  object.h  ray.cc  renderer.cc  renderer.h  scene.cc  scene.h  shader.cc  shader.h  vec.cc  vec.h
Assets/: CMakeLists.txt  Dielectric.cc  Dielectric.h  Lambertian.cc  Lambertian.h  Metal.cc  Metal.h  Sphere.cc  Sphere.h
Assets/Core/: CMakeLists.txt  camera.cc  camera.h  cpu_renderer.cc  cpu_renderer.h  material.h  object.h  ray.h  renderer.cc  renderer.h  scene.cc  scene.h  shader.cc  shader.h  vec.cc  vec.h
Core/: CMakeLists.txt  Sphere.cc  camera.cc  camera.h  material.cc  material.h  ray.h  renderer.cc  renderer.h  scene.h  shader.cc
citrus_core/: Cargo.toml
citrus_core/src/: camera.rs  hittable.rs  lib.rs  material.rs  ray.rs  render_ray.rs  sphere.rs  utils.rs  vec3.rs  world.rs
citrus_core/src/hittable/: mod.rs  sphere.rs
citrus_core/src/material/: mod.rs
examples/: runner.rs
shaders/: shader.frag  shader.vert
src/: core.rs  main.rs
src/core/: vec.rs
